# effless

./: CLAUDE.md  Cargo.toml  Dioxus.toml  README.md
src/: main.rs
src/logic/: base64_logic.rs  distance_logic.rs  mod.rs
src/tools/: base64_tool.rs  distance_tool.rs  hash_tool.rs  icon.rs  icon_tool.rs  json_tool.rs  mod.rs  qr_tool.rs  system_design_tool.rs  ulid_tool.rs  url_tool.rs  uuid_tool.rs
